先行研究以外たたき台

--- a/chapter06.tex
+++ b/chapter06.tex
@@ -8,169 +8,153 @@
 本章では，実験結果を踏まえた考察を述べる．
 
 
-\section{データセットと知識構造}
-データセットと知識構造について考察する．
-データセットの作成に利用する問題回答ログデータの要件を述べる際，
-科目が同じでも難易度が高いと，
-目的志向の知識である手続き的知識の有無が問題回答の正誤に影響を与える可能性が高く，
-知識構造もより階層的になる可能性が高いことを説明し，
-データの要件として，
-問題群が難しすぎないことを挙げた．
-また，それを満足するデータの収集対象として勉強サプリを選択し，
-手続き的知識の獲得を主目的とする6講座（小学4年算数，小学5年算数，小学6年算数，中学1年数学，中学2年数学，中学3年数学）
-から6データセットを作成した．
+\section{タグ抽出構造}
+オートエンコーダを用いた場合と用いない場合の違いについて？
 
-しかし，
-この中でも，特に，小学4年算数のデータセットは難しすぎないという点では十分だったが，
-難易度が低すぎた，あるいは内容があまり適切でなかった可能性がある．
-小学4年算数のデータセットから構築したネットワークは，
-モジュラリティについては宣言的知識についての全てのネットワークのものより小さかったものの，その中で最も小さかった小学4年社会のものと大きな差があるというわけではなく，
-フロー階層およびGRCについては，宣言的知識についての全てのネットワークのものよりも小さい組み合わせが複数存在する．
-つまり，モジュール性が大きく階層性が小さかったということである．
 
-このことは，小学4年算数が手続き的知識の学習を主目的としていないということ指しているのではないと考える．
-小学4年算数の問題例を示した図\ref{fig:qa_s4_mat}は四則演算の問題であり，これは数字という宣言的知識への手続きを用いて達成されるものである．
-小学4年算数の知識間関係ネットワークを示した図\ref{fig:net_s4mat}ではいくつかのクラスタが抽出されている．
-これらのクラスタ内ではある程度の階層性が存在するが，
-一方で，クラスタ間については，その内容が強く関連しているというわけではなく，
-したがって，ネットワーク全体としてはモジュール性が高く，また，階層性が低くなってしまっているのだと推察する．
 
-\section{知識構造分析手法の他MOOCsへの適用可能性}
-知識構造の分析手法の他MOOCsへの適用可能性について考察する．
-本研究で用いた知識構造の分析手法は
-1) データセット作成，2) 知識間関係行列の算出，3)ネットワーク構築および指標による構造評価
-の3つの要素から構成されていた．
-MOOCsで収集される問題回答ログデータは大規模であると考えられ，
-また，ネットワーク構築および指標による構造評価はDeep Knowledge Tracing（以下，DKT）で知識間関係を抽出できるかに依存する．
-したがって，
-知識構造の分析手法の他MOOCsへの適用可能性
-は，DKTの適用可能性に依存すると考えられる．
+\section{抽出された知識分類}
+階層性
+モジュール性
+可読性と予測性の違い
 
-そこで，
-DKTの予測性能について考察する．
-\cite{piech2015deep}では，数学に関するデータセットにおいてのみ，DKTの有効性が検証されていた．
-本研究の実験では，
-算数や数学に関するデータセットと地理や歴史に関するデータセットは，
-Bayesian Knowledge Tracingからの精度向上という点では大きな差はなかった．
-したがって，DKTの適用可能性は科目に依らないの可能性がある．
+
+
+
+\section{本手法の他MOOCsや他科目への適用可能性}
+本研究で用いた，問題回答から知識分類を抽出する手法の，他のMOOCsや他科目への適用可能性について考察する．
+本研究の手法は，
+1) データセット作成，2) 問題と知識分類の関係行列の算出，3)知識分類の抽出と分析
+の３つの要素から構成されていた．
+１）のデータセット作成については，MOOCsから収集される問題回答ログデータは，MOOCsや科目によらず大規模であると考えられる．
+また，３）の知識分類の抽出と分析については，知識獲得を適切に表現できる問題と知識分類の関係行列を，学習の過程で抽出できるかに依存する．
+よって，本手法の他MOOCsや他科目への適用可能性は，２）問題と知識分類の関係行列の算出に依存すると考えられる．
+この関係行列はDKTを拡張したモデル構造において学習されるため，
+DKT自体の他MOOCsや他科目への適用可能性によって，本手法の適用可能性も検証されると考えられる．
+
+
+そこで，DKTの他MOOCsや他科目における予測性能を考察する．
+\cite{piech2015deep}では，本研究同様，数学に関するデータセットにおいてのみ，DKTの有効性が検証されていた．
+那須野らは(参照)学習サプリのデータを使って，
+算数や数学に関するデータセットと地理や歴史に関するデータセットにDKTを適用した場合，
+Bayesian Knowledge Tracingからの精度向上という点では大きな差はないことを確認しており，
+DKTの適用可能性は科目に依らない可能性がある．
+
 
 また，
-\cite{piech2015deep}では，モデルへの入力次元には問題に割り当てられたタグが利用されており，
+\cite{piech2015deep}を始めとする既存研究では，モデルへの入力次元には問題に割り当てられたタグが利用されており，
 DKTの有効性はタグを用いた場合のみ，検証されていた．
 本研究の実験では，
-モデルへの入力次元にはタグを利用せず，個々の問題を利用し
-特に算数や数学に関する6データセットのうち5データセットでAUCが$0.8$を超えていた．
-このことは，DKTの適用には必ずしもタグが必要というわけではないということを示唆している．
-
-一方で，難易度という点では，例えば，高等教育水準の学習内容を理解するためには，初等教育や中等教育水準の学習内容をあらかじめ理解している必要があるため，
-モデルの訓練と予測の両方において，
-初等教育や中等教育水準の内容を理解している人と理解していない人
-を同様のデータとして扱うことは難しい可能性がある．
-つまり，
-知識獲得の予測は，
-当該講座の内容の学習に際してあらかじめ必要とされる知識を獲得している学習者に対して適用されるべきであり，
-そうでない学習者がいる割合が相対的に大きいと推察される高等教育水準の内容を扱うMOOCsにおいては，
-DKTの適用は限定的である可能性もある．
+抽出されたタグを比較検証するために，既存のタグが存在するデータセットを用いたものの，
+問題回答のみから知識タグを抽出できることは，実験結果から示されており，
+このことから，既存のタグが存在しないような他MOOCsや他科目のデータに対しても，
+生徒の知識獲得を予測することが可能であることを示している．
 
 
-以上，考察を踏まえると，
-適用できるとする側面と，適用が限定的であるという側面があり，
-DKTの適用可能性については検証実験を行う必要があると考えられる．
+一方で，これまで検証されているのは，
+特定の科目に関する問題回答ログであり，
+総合的な知識レベルを問うような，複数の科目が含まれている問題回答ログへの適用可能性は示されていない．
+
+また，利用できるデータセットは，生徒が該当のMOOCsで学習する過程で，
+段階的に知識を獲得していく前提のデータのみであり，
+MOOCs外での学習や，生徒ごとの能力差，事前知識などの情報に関しては，
+DKTが扱うことは難しい可能性がある．
+
+
+以上のような考察を踏まえると，
+本手法は，DKTが分析可能な他MOOCsや他科目のデータに加え，
+DKTが分析できない，事前の知識分類が存在しないデータに対しても適用できるという側面がある一方，
+複数科目のデータや生徒に関する事前情報など，
+現実に即した複雑な情報が多く含まれたデータに対しては，適用可能性が限定的である側面もある．
+% このような例として具体的にどのようなデータが考えられるか？
+
 
 本論文では，
-知識獲得における宣言的知識と手続き的知識の構造の違いを分析するために，
-初等中等教育向けのMOOCsを用いた．
-もし，Courseraをはじめとする大学講座を扱う多くのMOOCsの問題回答ログデータに対しても適用できるということであれば，
-大学講座を扱う多くのMOOCsでは非常に多様な科目が提供されているため，
-それらの講座で扱われる知識の構造を分析することで，
-知識獲得と内容や教材についてより詳細に分析できるようになる可能性がある．
+知識獲得予測の文脈において既存の知識分類よりも適切な知識分類を，
+深層学習によって抽出できることを示すために，既存の知識分類がつけられた，数学のMOOCsのデータを用いて比較検証した．
+本手法が，MOOCsや科目によらず，事前の知識分類を必要とせずに，
+的確な知識分類を学習できるとすれば，
+様々な科目のMOOCsのデータに適用することで，
+人間の知識獲得のメカニズムの解明や，
+既存の教育カリキュラムの妥当性の検証，
+さらには生徒一人ひとりの知識状態に最適化された教育設計が
+できるようになる可能性がある．
+% indivisuakizationについて弱いかも，どこに論点を置くか？
 
 
 
 
 \section{今後の展望}
 本研究の今後の展望について大きく2つの方針を述べる．
-1つは対象データの多様化，結合，長期化についてであり，
-1つは知識間関係の抽出に用いたDeep Knowledge Tracingの拡張についてである．
-
-\subsection{対象データの多様化，結合，長期化}
-まず，対象データの多様化について述べる．
-対象データの多様化は多様な科目や難易度についても学習者の知識獲得を予測しその知識構造を分析するという研究方針である．
-本研究では算数，数学，地理，歴史の知識構造について分析した．
-科目という点では，論理的思考，外国語，プログラミング等多くの科目については知識構造を分析しておらず，
-難易度という点では，大学水準のものについては
-知識構造を分析していない．
-知識獲得に関する知見は従来より指導や学習の設計に活用されており，
-他の多様なデータに対してもその知識構造を明らかにすることは重要であると考える．
+１つは教育学における対象データの拡大についてであり，
+１つは教育学以外の分野への本手法の応用についてである．
 
 
-次に，対象データの結合について述べる．
-対象データの結合は，異なる科目間で同じ学習者の知識獲得を予測しその知識構造を分析するという研究方針である．
-本研究では算数，数学，地理，歴史の知識構造についてそれぞれ独立に用いて分析した．
-例えば，数学や歴史は内容の関連性は低いだろうと考えるが，
-数学と理科は知識獲得という点で密接に関係していると考える．
-しかし，そうした科目間の知識構造を定量的に分析した研究もまだない．
-対象データを結合した研究は科目間の知識構造を定量的に分析することで，
-科目内の指導や学習の設計だけでなく科目間も考慮した設計に貢献すると考えられる．
+\subsection{教育学における対象データの拡大}
+まず，教育学における対象データの拡大について述べる．
+対象データの拡大とは，科目や難易度の多様化，予測期間の長期化，そして複数科目の統合である．
 
 
-最後に，対象データの長期化について述べる．
-対象データの長期化は，同じ学習者の知識獲得を長期間に渡って測定し，
-同じ科目で，あるいは，科目をまたいで，知識獲得を予測し，
-その知識構造を分析するという研究方針である．
-本研究では，データセットの対象期間は1年弱であった．
-しかし，学習者の知識獲得は既に獲得している知識に依存しており，
-できるだけ長い期間のデータを利用する方が，よりよく知識獲得を予測できる可能性が高い．
-つまり，
-より知識構造を明瞭に抽出でき，
-長期的な視点で科目を横断した指導や学習の設計に活用できる可能性が高い．
+まず，科目や難易度の多様化について述べる．
+本研究では．算数や数学の問題回答ログに対して深層学習を適用し，
+知識獲得予測に適した知識分類を得た．
+これまでのDKTの研究成果から，算数や数学以外の教科に対しても適用できる可能性は高いが，
+実際にどのような知識分類が抽出されるかは分析していない．
+また，今回扱ったデータセットは，小学校から高校程度の算数や数学に関する問題回答であり，
+より高度で専門的な大学レベルの学問に適用する場合についても，
+どのような知識分類が抽出されるかは分析していない．
+知識獲得の最適化に関する知見は，学校側からの指導や生徒自身の学習設計に活用されており，
+多様な難易度や科目において知識獲得を最適化する知識構造を明らかにすることは，重要であると考えられる．
 
 
-
-\subsection{知識間関係抽出手法の拡張}
-知識間関係の抽出に用いたDeep Knowledge Tracingの拡張について2つ述べる．
-
-
-%カリキュラム学習
-1つ目は，モデルの学習の際に長期的なログがある学習者の優先度をあげるという研究である．
-知識獲得は既に獲得している知識に依存しており，
-したがって，既に獲得している知識について多くわかっていた方が予測しやすい．
-つまり，長期的なログのある学習者を優先的に考慮した方が抽出される知識構造はいいものになる可能性がある．
-こうした研究に関連するものとして，カリキュラム学習というものがある．
-カリキュラム学習は2009年にBengioらが提案した研究領域\cite{bengio2009curriculum}である．
-カリキュラム学習はモデルの学習に際して，学習に用いるデータをカリキュラムに基づいて制御するという学習方法である．
-例えば，手書き文字認識では文字列が短い画像から学習させていき徐々に長い文字列の画像を含めて学習させることで，
-最終的に得られるモデルの性能が向上することが報告されている\cite{louradour2014curriculum}．
-こうした手法でよりよい予測モデルを構築することで，
-抽出される知識構造も知識間関係をよく表現したものになる可能性がある．
+次に，予測期間の長期化について述べる．
+本研究で用いたデータセットの対象期間は，１〜２年程度であった．
+しかし，DKTを用いた生徒の知識獲得の予測は，
+それまでの生徒の知識獲得の過程に依存しており，
+できるだけ長い期間の知識獲得を分析するほうが，
+より高い精度で知識獲得を予測でき，また，より適切な知識分類を抽出できる可能性は高い．
 
 
-%タグの自動抽出
-2つ目は，予測の過程でタグを生成し知識の構造化に利用するという研究である．
-データセットによっては同じ知識を複数の別の問題で繰り返し学習させるという学習支援システムから収集されたものもあると考えられる．
-例えば，数学の演習問題$2x+1=0$と$3x-4=0$，$-3x+5=0$はほとんど同じ知識を問う問題であると考えられる．
-こうした場合，抽出した知識間関係ネットワークは必ずしも，
-ノード数という点で解釈しやすいものであるとは限らず，
-また，
-同じ知識を扱う問題群は相互に影響を与え合うため，環状構造を構築しやすい．
-したがって，
-そうしたネットワークでは，階層性の評価は難しくなる可能性があると考えられる．
-こうした問題を解決するためには，
-ほとんど同じ内容を扱っている問題にタグを割り当て，タグを1つのノードとして扱うようなネットワークを構築する必要があり，
-また，そのためには，
-抽出する知識間関係行列の各行，各列がタグを表現するようになっている必要があると考えられる．
-
-こうした抽象的な関係を捉えるということに深層学習における埋め込みに関する技法が利用できる可能性がある．
-従来専門家がよいとしてきたタグと予測する過程で深層学習モデルが獲得するタグを比較することで，
-知識の粒度について新たな知見を得ることができると考えられる．
-また，タグを自動で抽出できるようになれば，
-これまで専門家が手で行っていた問題へのタグの割り当てとタグ間の関係の定義
-の2つの難しいタスクを深層学習の手法によりできるようになるということであり，
-学習科学の研究はこれまでにないほど進展するだろう．
+最後に，複数科目の統合について述べる．
+本研究や既存研究では，特定の科目について独立に知識獲得を予測し，知識構造を分析している．
+しかし，実際の生徒の学習の成長過程は，科目間で完全に独立であるとはいえず，
+例えば，歴史と地理や，数学と物理などの科目間では，知識獲得の過程が密接に関係している可能性がある．
+一人の生徒の，科目を横断した知識獲得過程に関する研究は，これまで報告されていないが，
+複数科目を統合したデータに対して本手法を適用することで，科目内の分類や学習設計だけでなく，
+包括的な学習設計や，既存の科目という分類にとらわれない，人間が獲得する知識一般に関する知見も得られる可能性がある．
+% もう少しスケールダウンして，論理の飛躍抑える
 
 
 
+\subsection{教育学以外の分野への応用}
+次に，本手法の教育学以外の分野について述べる．
 
+本手法は，Knowledge Tracingという，
+教育学の，知識獲得予測タスクにおける手法だが，
+より手法を一般化することで，教育学以外の分野にも応用できる可能性を秘めている．
+
+本手法は，
+生徒の時系列問題回答ログから，
+回答を重ねるごとに遷移していく知識状態をモデリングし，
+知識獲得の過程を適切に表現する知識分類を抽出するというものだが，
+
+これをより一般化して捉えると，
+人間の，何らかのコンテンツ集合に対する時系列行動ログから，
+行動を重ねるごとに遷移していく人間の何らかの状態をモデリングし，
+行動の遷移を適切に説明する分類表現を抽出しているといえる．
+
+教育学の知識獲得の分野においては，
+このコンテンツ集合に対する行動が生徒の問題回答であり，
+問題回答により遷移する生徒の知識状態をモデリングしているが，
+これと同様のことは，教育学に限らず行える可能性がある．
+
+例えば，消費者が商品を購買するログを分析することで，
+消費者の消費嗜好が遷移する過程をモデリングし，
+従来の商品分類と異なる，消費者の消費嗜好の遷移を反映した分類を抽出することが可能になる．
+教育学では，問題回答の正誤と知識の間の特殊な関係性をモデル設計に反映しているように，
+手法を適用する領域によって調整は必要であるが，
+コンテンツに対する行動の時系列性を反映した分類を抽出できる可能性は高く，
+様々な領域で，重要な意味を持つ新たな知見を得られると考えられる．
 
 
 
