--- a/chapter07.tex
+++ b/chapter07.tex
@@ -7,35 +7,36 @@
 
 
 本論文では，
-主に心理学の研究領域で議論されていた宣言的知識と手続き的知識の獲得における知識構造の違いを定量的に分析し，
-知識獲得における宣言的知識の知識構造は手続き的知識の知識構造と比べてよりモジュール性が高く，
-逆に，手続き的知識の知識構造は宣言的知識の知識構造と比べてより階層性が高いことを検証した．
+数学の学習における生徒の知識獲得を深層学習に予測させる過程で，
+予測を最適化させるような知識分類を抽出することで，
+知識獲得予測において，人間が作成した既存の知識分類よりも優れた知識分類を抽出できることを検証した．
 \vvspace
 
+
+
 検証過程で得られた知見に基づいて，
-本研究で用いた知識構造の分析手法の他MOOCsへの適用可能性について議論し，
-講座の科目や問題へのタグの有無に依らず知識構造を分析できる可能性があること，
+本研究の分析手法の他MOOCsや他科目への適用可能性について議論し，
+科目や既存の知識分類の有無によらずに知識獲得を分析できる可能性があること，
 および，
-特に，大学水準の難易度を扱うMOOCsについては検証実験を行う必要があることを指摘した．
+複数科目を統合した知識獲得や，大学水準の知識獲得に関する分析については，
+検証実験を行う必要が有ることを述べた．
 \vvspace
+
 
 また，本研究の拡張として，
 適用対象の拡張という点で
-対象データの多様化，結合，長期化の3つの拡張を述べた．
+対象データの多様化，対象期間の長期化，複数科目の統合，の3つの拡張を述べた．
 また，
-知識間関係抽出法であるDeep Knowledge Tracingの拡張という点で，
-カリキュラム学習による拡張，および，
-スキルタグ自動抽出による拡張の2つについて述べた．
+より一般性を高めることで，
+教育学以外の領域においても本手法が適用できる可能性に触れ，
+人間行動の多様な知見を生む可能性を論じた．
 \vvspace
 
 
-本研究は
-MOOCsの登場，ネットワーク分析の発展，深層学習の躍進等，
-ここ数年の幅広い領域のさまざまな成果によって，初めてその実施が可能になったものである．
-本研究が，人間の学習や知能の解明の一助になると信じている.
-
-
-
+本研究は，
+MOOCsの登場や深層学習の躍進，教育学のデータ分析の活発化など，
+近年の多様な分野の成果によって，初めてその実施が可能になったものである．
+本研究が，人間の学習や行動原理の解明の一助になると信じている．
 
 
 
