--- a/abstract.tex
+++ b/abstract.tex
@@ -1,98 +1,65 @@
-%TODO: chapter1との差分，もう少し簡潔に書くかも
-%Indivisualizationの重要性
-全ての生徒に等しく，適切な教育を施すことは，教育の分野において常に関心の的である．
+% 背景１；オンライン学習サービスの普及によるビッグデータ蓄積
+近年，オンライン教育サービスの普及に伴い，
+教育におけるビッグデータの活用が進んでいる．
 
-学習の速度や得手不得手は人それぞれであり，同じ教育を施しても，十分な理解ができる生徒もいれば，つまずいてしまう生徒もいる．
-しかし，現在の学校教育では，一人の教師が，複数の生徒に対して同時に教育する形態が一般的である．
-そのため，全体の学習の速度についていけない生徒がつまずき，習熟が進まない悪循環に陥る一方で，
-習熟の早い生徒が，発展的な学習の機会が奪われることで，やる気を損ねることにもつながる．
-
-
-% 塾や個別指導という解決策
-このような画一的な学校教育の問題を補うために，塾や予備校などが利用される．
-各々の生徒が，自身の習熟度合いに沿った教育を受けることで，効率的に学習を進めることができる．
-より個別に教育を受ける方法として，個別指導形式の塾や家庭教師，通信教育なども利用される．
-生徒一人ひとりに教師がつき，生徒の習熟度合いを考慮して教育を設計できるため，生徒に適切な教育を提供できるという点で，有効である．
+オンライン教育サービスは，
+既存の学校教育と異なる，新たな学習機会を提供することに加え，
+サービスを利用する生徒の学習行動ログを収集することが可能なため，
+これまで困難であった，大規模な学習効果分析が可能になった．
 
 
-% 個別指導教育の問題点
-しかし，こうした個別指導形式の教育は，当然，教師一人あたりが担当できる生徒の数が減るため，人材的にも，金銭的にも負担が大きくなる．
-そのため，教師となる人材の不足や，担当になる教師ごとの指導能力の違い，また，教育を受けるための金銭的負担などの条件が重なり，
-誰もが平等に適切な教育を受けるという目的を達成するには，障害が残る．
+% 背景２：深層学習の高まり
+一方，近年，教育に限らない多くの研究領域で，深層学習が注目されている．
+人間の脳の構造を模した多層のニューラルネットワーク構造によって，
+従来の機械学習では難しかった，データの複雑な意味表現を抽出することができ，
+多様な領域で大きな進展がもたらされている．
 
+こうした深層学習の技術を，
+オンライン教育サービスに蓄積された大規模な学習行動ログに対して適用することで，
+これまで困難だった，人間の複雑な知識構造や学習効果の分析が可能になった．
 
-% MOOCsの注目
-こうした問題意識から，近年，MOOCs(Massive Open Online Courses)と呼ばれる，大規模オンライン講座が注目されている．
-MOOCsは，従来のような，教室で一斉に授業をするような形式と異なり，
-オンライン上で提供される，多様な分野や難易度の講義から，時間や場所を問わずに，自分のペースで学習したいものを選択して学習できるという，これまでにない学習機会を提供している．
-従来の教育が抱える，全ての生徒が，自身の習熟度合いに沿った教育を受けられないという問題を解決するものとして，活用が期待されており，
-現に世界中でこうしたMOOCsの利用は拡大している．
-
-
-% MOOCsの可能性
-さらに，MOOCsは単に新たな学習機会を提供するというだけにとどまらず，これまで困難であった大規模な学習効果分析を可能にするプラットフォームとして期待されている．
-オンライン上で提供された講義を生徒が学習する際に，その学習行動ログをデータとして蓄積することが可能なため，
-そうして蓄積された，多様な学習者の大規模な学習行動ログから，多様な学習効果の分析が可能になった．
-こうした包括的な学習行動の分析は，教育システム自体のあり方を分析し，検証できるという点で，学術的な価値も高い．
-
-
-%深層学習の高まり
-また，近年，学習や教育の分野に限らず，多くの研究領域で深層学習が注目されている．
-深層学習とは，多層のニューラルネットワーク構造を持つ機械学習のことで，
-従来の機械学習では難しかった，対象データの意味表現の抽出を，最適化の過程で行うことができる，
-
-
-% 深層学習&教育
-こうした深層学習の技術を用いることで，学習や教育の領域における研究も，大きく進展している．
-MOOCsに蓄積された，大規模な学習行動ログから，学習者の知識獲得を予測する研究においても，
-深層学習を適用したことによって，
-高い精度で知識獲得を予測できること，
-また，深層学習が最適化の過程で獲得した，知識間関係のネットワーク構造も抽出できることが報告されている．
-
-
-% 大規模データ&深層学習
-新たな学習のプラットフォームとして活用が進むことで，大規模な学習行動ログを蓄積できるMOOCsの発展と，
-大規模なデータから潜在的な意味表現を学習できる深層学習技術の発展という，
-二つの条件が揃ったことにより，教育や学習の分野における研究は，大きな可能性を秘めている．
+特に，生徒の学習効果を最適化する目的で古くから行われてきた，
+生徒の知識獲得を予測する研究は，
+オンライン学習サービスにおける生徒の学習効率向上に直接的に寄与することに加え，
+深層学習を適用することによって，高い精度での予測が可能な上，知識間のネットワーク構造を抽出できることが報告されており，
+今，大きな注目を集めている研究分野の一つである．
 
 
 % 本論文の目的
-本研究では，生徒の学習行動ログに対して，深層学習を適用することで，生徒の知識獲得を予測する．
-既存の研究では，事前に専門家によって定義された知識分類を用いて，知識獲得の予測が行われていたが，
-本論文では，問題の背後に潜在する知識集合の存在を仮定してモデルを設計することにより,
-事前に知識分類を与えない状態でも，知識獲得予測を最適化する過程で，知識分類を獲得し，
-かつ，抽出された知識分類が，既存の知識分類より効率的に生徒の学習過程を表現できるものであることを示す．
+本研究では，生徒の学習行動ログに対して，深層学習を適用し，生徒の知識獲得を予測する．
+既存の研究では，事前に専門家が作成した知識分類を用いて，知識獲得の予測が行われていたが，
+本論文では，人間が作成した知識分類は，現実の生徒の知識獲得を説明する上で最適化されたものではない，という仮説に立ち，
+深層学習モデルによって生徒の知識獲得予測を行う過程で，
+モデル自身に新たな知識分類を自動で抽出させることで，
+より最適化された知識分類を獲得することを目的とする．
 
-
-% 分析方法
-まず，分析対象となるデータセットを，世界最大級？のMOOCsである「ASSISTments」をはじめとする，XつのMOOCsにおける，数学に関する問題回答ログより作成する．
-これらのデータセットに対して，生徒が，問題に回答する中で知識を獲得していく過程を分析する．
-そして，分析の過程で深層学習が獲得した知識構造から知識分類を抽出し，既存の知識分類と定量的・定性的に比較し，検証する．
-
-
-% 実験結果
-検証実験の結果，いずれのデータセットにおいても，深層学習が抽出した知識表現を用いた場合が，
-専門家が事前に定義した従来の知識分類を用いた場合よりも，
-知識獲得を高精度で予測できることが検証された．
+実験の結果，
+深層学習が抽出した知識分類を用いることで，
+人間が作成した既存の知識分類を用いる場合より高い精度で
+知識獲得を予測できることが検証された．
 
 また，抽出された知識分類を分析した結果，
 既存の分類を横断するような，複数の分野の基礎となっている知識表現や，
 これまで一つとされていた分野をより階層的に分解するような，難易度を表す知識表現などが獲得されていることを確認した．
 
-
 % 考察
-これらの検証結果は，知識獲得を説明する上では，人間が定義した知識分類より優れた知識分類を深層学習が獲得したことを示しており，
-深層学習の獲得した表現が，現状の教育システムを再構築する可能性を示唆している．
+これらの検証結果は，
+知識獲得を予測する上では，
+人間が定義した知識分類よりも優れた知識分類を，
+深層学習が獲得したことを示しており，
+この知識分類を活用することにより，
+より最適化された学習プロセスを設計できる可能性を示唆している．
 
-
-以上の検証結果を踏まえ，
-本研究で用いた分析手法の他教科や他のMOOCsへの適用の可能性や，
-研究の拡張として，教育学以外の分野への応用の可能性を考察した．
+さらに，
+研究の拡張として，
+本研究で用いた分析手法の教育学での適用可能性や，
+教育学以外の分野への応用可能性を考察した．
 
 
 % まとめ
 本研究は．
-MOOCsの登場や深層学習の躍進など，ここ数年の多様な領域の進展によって可能になったものである．
-本研究が，人間の学習や知識の解明，そして現状の教育システムの検証や再構成の一助になると信じている．
+オンライン学習サービスの普及や，教育分野におけるビッグデータ分析の活発化，深層学習の躍進など，
+ここ数年の多様な領域の進展によって初めて可能になったものである．
+本研究が，既存の教育システムの再構築，そして人間の学習や知識の解明につながると信じている．
 
 
