--- a/chapter01.tex
+++ b/chapter01.tex
@@ -10,85 +10,122 @@
 
 \section{背景}
 
-%Indivisualizationの重要性
-全ての生徒に等しく，適切な教育を施すことは，教育の分野において常に関心の的である．
+% 問題意識：　教育の個人最適化の重要性と難しさ
+全ての生徒に等しく，かつ最適な教育を施すことは，教育の現場において常に関心の的となってきた．
 
-学習の速度や得手不得手は人それぞれであり，同じ教育を施しても，十分な理解ができる生徒もいれば，つまずいてしまう生徒もいる．
-しかし，現在の学校教育では，一人の教師が，複数の生徒に対して同時に教育する形態が一般的である．
-そのため，全体の学習の速度についていけない生徒がつまずき，習熟が進まなくなる一方で，
-習熟の早い生徒が，発展的な学習の機会が奪われることで，やる気を損ねることにもつながる．
-特に，生徒が基礎的な部分でつまずいてしまうと，以後の応用的な内容を理解できないため，興味を持てなくなり，学習をしなくなるという悪循環に陥りやすい．
-日本でも，東京都教育委員会が
-「児童・生徒の学習のつまずきを防ぐ指導基準(東京ミニマム)」\footnote{\url{http://www.kyoiku.metro.tokyo.jp/buka/shidou/manabiouen/minimum_02.htm}}
-% 書籍として引用した方がいい？
-という指導基準が設けており，生徒のつまずきは深刻な問題とされている．
-% 論文引用
-生徒の習熟過程に関する研究は古くからあり，Corbettらは，知識獲得の予測のタスクとしてKnowledge Tracingというタスクを提案した．
-Knowlege Tracingは，過去の問題回答ログデータから，次に解く問題の正誤を予測するというタスクである．
+現在の学校教育では，一人の教師が，複数の生徒に対して同時に教育する形態が一般的であるが，
+学習の速度や，教科や単元による得手不得手は人それぞれであり，
+同じ教育を施しても，十分な理解ができる生徒もいれば，つまずいてしまう生徒もいる．
+%「児童・生徒の学習のつまずきを防ぐ指導基準(東京ミニマム)」\footnote{\url{http://www.kyoiku.metro.tokyo.jp/buka/shidou/manabiouen/minimum_02.htm}}
 
-
-
-% 塾や個別指導という解決策
-このような画一的な学校教育の問題を補うために，日本では，塾や予備校などが利用される．
+このような画一的な学校教育の問題を解決するために，塾や予備校などが利用される．
 各々の生徒が，自身の習熟度合いに沿った教育を受けることで，効率的に学習を進めることができる．
-より個別に教育を受ける方法として，個別指導形式の塾や家庭教師，通信教育なども利用される．
-生徒一人ひとりに教師がつき，生徒の習熟度合いを考慮して教育を設計できるため，生徒に適切な教育を提供できるという点で，有効である．
+より個別に教育を受ける手段として，個別指導形式の塾や家庭教師，通信教育なども利用される．
+生徒一人一人に教師がつき，生徒の習熟度合いを考慮して教育を設計できるため，
+生徒ごとに適切な教育を提供できるという点で，有効である．
 
-
-% 個別指導教育の問題点
 しかし，こうした個別指導形式の教育は，当然，教師一人あたりが担当できる生徒の数が減るため，人材的にも，金銭的にも負担が大きくなる．
-そのため，教師となる人材の不足や，担当になる教師ごとの指導能力の違い，また，教育を受けるための金銭的負担などの条件が重なり，
-誰もが平等に適切な教育を受けるという目的を達成するには，障害が残る．
+そのため，教師となる人材の不足や，教育を受けるための金銭的負担，そして担当になる教師ごとの指導能力の違いなどから，
+誰もが平等に最適な教育を受けるという目的を達成するには，障害が残る．
 
 
-% MOOCsの注目
-% MOOCsとオンライン学習支援プラットフォーム区別する？包含関係
-こうした問題意識から，近年，MOOCs(Massive Open Online Courses)と呼ばれる，大規模オンライン講座が注目されている．
-% 論文引用
-MOOCsは，従来のような，教室で一斉に授業をするような形式と異なり，
-オンライン上で提供される，多様な分野や難易度の講義から，時間や場所を問わずに，自分のペースで学習したいものを選択して学習できるという，これまでにない学習機会を提供している．
+% 背景１：オンライン教育サービスの普及とビッグデータの蓄積
+このように，学習の個人最適化は，
+大きな重要性を持つ一方で，解決が難しい問題とされてきたが，
+近年，この問題を，
+オンライン教育サービスとビッグデータの活用によって
+解決しようという動きが活発化している．
+
+
+% 背景１-A: オンライン教育サービスによる新たな学習形態
+オンライン教育サービスとは，
+従来の学校の教室で，複数の生徒に対して同時に教育する形態と異なり，
+PCやモバイル端末を通じて，
+オンライン上で提供される学習コンテンツを，生徒が各自で利用するサービスを指す．
+
+オンライン教育サービスの一つであるMOOCs(Massive Open Online Courses)は，
+多様な分野や難易度の講義から，時間や場所を問わずに，生徒が自分のペースで学習したいものを選択して学習できるというもので，
 従来の教育が抱える，全ての生徒が，自身の習熟度合いに沿った教育を受けられないという問題を解決するものとして，活用が期待されている．
 例えば，世界最大級のMOOCsの一つであるCoursera\footnote{\url{https://www.coursera.org/}}は，
 2017年1月の時点で，
 29の国にまたがる148の教育機関とパートナーシップを結び，
 コンピュータサイエンス，数学や論理，社会科学などに関する1600以上の講座を，2200万人以上に提供している．
-日本では2013年2月に東京大学がCourseraに，2013年5月に京都大学がedX\footnote{\url{}}に参加を表明したことから普及し，
+日本では2013年2月に東京大学がCourseraに，2013年5月に京都大学がedX\footnote{\url{https://www.edx.org/}}に参加を表明したことから普及し，
 2013年11月には日本版のMOOCsとしてJMOOC\footnote{\url{https://www.jmooc.jp/}}が設立されるなど，
 国内外でMOOCsの利用が拡大している．
 
+多様な講座を多くの人に提供するMOOCs以外にも，
+より個人の学習過程をサポートすることを目的として，
+ITS(Intelligent Tutoring System)と呼ばれるオンライン自動学習支援システムの利用も拡大している．
+世界最大級のITSであるKnewton\footnote{\url{https://www.knewton.com/}}では，
+生徒の学力や理解度と，学ぶべき対象をマッピングすることで、
+生徒に最適な学習過程を設計し，
+かつ生徒の学習の進捗に応じてその過程を動的に変化させる仕組みを有している．
 
-% MOOCsの可能性
-さらに，MOOCsは単に新たな学習機会を提供するというだけにとどまらず，これまで困難であった大規模な学習効果分析を可能にするプラットフォームとして期待されている．
+近年ではITSとMOOCsの融合も進んでおり，（参考文献）
+オンライン教育サービスの利用が世界中で拡大している．
+
+日本でも，生徒が自宅でオンライン教育サービスを用いて知識を学び，
+学校ではより参加型のディスカッションを行うという「反転学習」（参考文献）
+の試みが提唱されており，オンライン教育サービスが社会に与える影響は今後さらに大きくなっていくといえる．
+% これじゃなくて学習サプリの例でもいいかも
+
+
+% 背景１−B：オンライン教育サービスによるビッグデータの蓄積と活用
+さらに，オンライン教育サービスは，新たな学習形態を提供するのみにとどまらず，
+これまで困難であった，大規模な学習効果分析を可能にするプラットフォームとして期待されている．
+
 オンライン上で提供された講義を生徒が学習する際に，その学習行動ログをデータとして蓄積することが可能なため，
-そうして蓄積された，多様な学習者の大規模な学習行動ログから，多様な学習効果の分析が可能になった．
-% 論文引用
-こうした包括的な学習行動の分析は，教育システム自体のあり方を分析し，検証できるという点で，学術的な価値も高い．
+そうして蓄積された多様な学習者の大規模な学習行動ログから，多様な学習効果の分析が可能になった．
+特に，演習問題の回答ログは，その問題が問う知識を学習者が獲得しているか否かを表すため，知識獲得の分析に利用できる．（knowledge tracingの参考文献）
+例えば，生徒の問題回答ログを利用して知識獲得の予測を行った研究（参考文献MacHardy and Pardos, 2015）は，
+有名なMOOCsの一つであるKhan Academy3\footnote{\url{https://www.khanacademy.org/}}に蓄積された100万件以上の問題回答ログを使用しており，
+教育の分野における大規模データを適用した分析の一つである．
 
 
-%深層学習の高まり
-また，近年，学習や教育の分野に限らず，多くの研究領域で深層学習が注目されている．
-深層学習とは，多層のニューラルネットワーク構造を持つ機械学習のことで，
-従来の機械学習では難しかった，対象データの意味表現の抽出を，最適化の過程で行うことができる，
-% 論文引用
 
-% 深層学習&教育
-こうした深層学習の技術を用いることで，学習や教育の領域における研究も，大きく進展している．
-MOOCsに蓄積された，大規模な学習行動ログから，学習者の知識獲得を予測するKnowledge Tracingの研究においても，
-深層学習を適用したことによって，
-高い精度で知識獲得を予測できること，
-また，深層学習が最適化の過程で獲得した，知識間関係のネットワーク構造も抽出できることが報告されている．
+% 背景２：深層学習の高まり
+一方，近年，教育に限らない多くの研究領域で，深層学習が注目されている．
+人間の脳の構造を模した多層のニューラルネットワーク構造によって，
+従来の機械学習では難しかった，データの複雑な意味表現を抽出することができ，
+% 文献更新
+画像認識\cite{schroff2015facenet,szegedy2014going}，
+音声認識\cite{hinton2012deep, bahdanau2015end}，
+機械翻訳\cite{sutskever2014sequence, dong2015multi}等，
+多様な研究領域で飛躍的な進展が報告がされている．
+
+% 最新の研究チェック，人に聞く
+% http://qiita.com/eve_yk/items/f4b274da7042cba1ba76
+% http://qiita.com/sakaiakira/items/9da1edda802c4884865c
+% 画像認識，画像生成，音声認識，機械翻訳，強化学習？
+画像認識では深層学習により例えば犬の表現として目や鼻，口の表現が抽出できると報告する研究\cite{zeiler2014visualizing}や，
+人間より高い精度で人の顔を見分けられたと報告する研究\cite{schroff2015facenet}もある．
+機械翻訳の領域では，可変長の英語を可変長のフランス語に翻訳する研究\cite{sutskever2014sequence}やフランス語とオランダ語，スペイン語の共通表現を抽出し英語から1つのモデルで翻訳する研究もある\cite{dong2015multi}．
 
 
-% 大規模データ&深層学習
-新たな学習のプラットフォームとして活用が進むことで，大規模な学習行動ログを蓄積できるMOOCsの発展と，
-大規模なデータから潜在的な意味表現を学習できる深層学習技術の発展という，
-二つの条件が揃ったことにより，教育や学習の分野における研究は，大きな可能性を秘めている．
 
-% Knowledge Tracingの重要性
-中でも，生徒の知識獲得を予測するKnowledge Tracingの分野は，
-生徒ごとの習熟度合いの違いを分析するという，教育学的重要性に加え，
-大規模ログデータから分析するという，深層学習との相性の良さから，
-近年多くの注目を浴びている分野である．
+こうした深層学習の技術を，
+オンライン教育サービスに蓄積された大規模な学習行動ログに対して適用することで，
+これまで困難だった，人間の複雑な知識構造や学習効果の分析が可能になった．
+
+特に，学習効果を最適化する目的の，生徒の知識獲得を予測するKnowledge Tracingの研究も，深層学習により大きく進展した．
+PiechらはKnowledge Tracingに深層学習を活用するDeep Knowledge Tracingという手法を発表した\cite{piech2015deep}．
+時系列分析でよく用いられる深層学習モデルであるRecurrent Neural Networks(参考文献)を活用することで，
+高い性能で知識獲得を予測できること，
+また，予測モデルを分析することで知識間関係をネットワークとして抽出できることが報告された．
+
+オンライン教育サービスにおける生徒の学習効率向上に直接的に寄与するという性質もあって，
+今，大きな注目を集めている研究分野の一つである．
+
+
+% 人間の作り出した体系を再構築する可能性＝タグ自動抽出の重要性
+このように，
+オンライン教育サービスの普及とビッグデータの蓄積，
+深層学習の躍進により，
+教育や学習に関する研究は，大きな可能性を秘めている．
+大規模データを元にした分析から得られる知見は，
+これまで人間が作ってきた体系を検証し，再構築するための標として，
+社会に大きな影響を与えるものとなりうる．
 
 
 
@@ -98,22 +135,26 @@ MOOCsに蓄積された，大規模な学習行動ログから，学習者の知
 
 \section{研究目的}
 
-本論文の目的は，
-生徒の学習行動ログから知識獲得を予測するknowledge Tracingのタスクにおいて，
-問題の背後に潜在する知識集合の存在を仮定してモデルを設計することにより,下記の2つを検証することである．
+本研究では，生徒の学習行動ログに対して，深層学習を適用し，生徒の知識獲得を予測する．
+既存の研究では，事前に専門家が作成した知識分類を用いて，知識獲得の予測が行われていたが，
+本論文では，人間が作成した知識分類は，現実の生徒の知識獲得を説明する上で最適化されたものではない，という仮説に立ち，
+下記の２つを検証することを目的とする．
 \begin{itemize}
-\item 事前の専門家による知識分類を必要とせずに，知識獲得の予測を高い精度で行うことができる.
-\item 深層学習によって抽出した知識分類が，専門家によって作られた知識分類より，的確に知識構造を表現できる．
+\item 事前の専門家による知識分類がなくとも，深層学習が知識獲得予測を最適化する過程で，知識分類を自動的に抽出することができる．
+\item 深層学習によって抽出した知識分類を用いることで，専門家によって作られた知識分類を用いる場合よりも，高い精度で知識獲得予測を行うことができる．
 \end{itemize}
+
 一般的な知識獲得予測では，問題によって評価される知識を，事前に専門家によってつけられた知識分類に基づいて定義している．
-本論文では，この問題によって評価される知識を，モデル自身が学習して抽出した知識分類に基づいて評価するように設計している．
-これは，専門家による事前の知識分類は，「知識構造はこうなっているはずだ」ないしは「この分類に沿って教えることが望ましい」と専門家が考えた仮説や理論に基づいたものであり，
-実際の生徒の知識獲得の過程を分析し，知識獲得を的確に説明できる分類であるという保証がないためである．
-本論文では，専門家の事前分類を所与のものとせずに，問題の回答ログデータのみを深層学習に適用することで，
+しかし，専門家による事前の知識分類は，「知識構造はこうなっているはずだ」ないしは「この分類に沿って教えることが望ましい」と専門家が考えた仮説や理論に基づいたものであり，
+実際の生徒の知識獲得の過程を定量的に分析し，最適化したものであるとは言えない．
+
+本論文では，専門家による事前の知識分類を所与のものとせずに，
+問題の回答ログデータのみを深層学習に適用することで，
 知識獲得の過程を最もよく説明する知識分類を抽出することを目的としている．
 
-従来，専門家が事前に分類することが必要であった，大規模な問題回答ログデータに対し，
+従来，専門家が事前に分類することが必要であった，「問題」という大きな粒度の概念から，
 深層学習によって自動で知識分類を抽出し，知識間の関係性を学習できることを明らかにすることは，
+既存の学問体系やカリキュラム設計の検証や再構築を促すものとなり，
 学術的な意義が大きいと考える．
 
 
@@ -126,54 +167,49 @@ MOOCsに蓄積された，大規模な学習行動ログから，学習者の知
 \section{本論文の構成}
 以降の本論文の構成について述べる．
 
-% 差分を明確に，研究価値をあきらかにするために，関連情報与える．
+% 差分を明確にし，研究価値をあきらかにするために，関連情報与える．
 2章では，先行研究について述べる．
-まず，従来の教育における，画一的な教育システムに関する問題点を述べる．
-次に，MOOCsについての事例を挙げ，効果や問題点，関連する研究について述べる
+まず，教育学の観点から，従来の教育システムに関する問題点を述べる．% 省くかも
+次に，オンライン教育サービスについての事例を挙げ，効果や問題点，関連する研究について述べる
 さらに，深層学習について概説した後，特に本論文との関わりが深いRecurrent Neural Netoworksについて詳細に述べる．
-そして，知識獲得の予測手法であるKnowledge Tracingについて，伝統的な手法と，深層学習を用いた最先端の手法について整理した後，
-モデルから抽出された知識構造から，知識分類を作成する際に用いる，次元圧縮の手法について述べる．
+そして，知識獲得の予測手法であるKnowledge Tracingについて，その有益性や，伝統的な手法，深層学習を用いた最先端の手法について整理した後，
+本研究における拡張を行うための技術について述べる．
+
 
 
 % 差分を明確にし，その差分が重要であることを示す．分析手法
 3章では，分析手法について述べる．
-事前の知識分類を用いずに生徒の知識獲得を予測し，抽出された知識分類を分析する手法について説明する．
+事前の知識分類を用いずに生徒の知識獲得を予測し，その過程で抽出された知識分類を分析する手法について説明する．
 
-まず，分析手法全体の流れを概説し，手法全体が２つのブロックから構成されることを述べる．
-その後，まず，既存の知識獲得予測の手法において，Deep Knowledge Tracingが最適であることを述べる．
-次に，分析対象とする問題回答ログデータにおける要件として，
-データセットが大規模であること，
-数学に関する問題回答ログであること，
-抽出した知識分類と比較可能な，既存の知識分類を有すること
-について説明する．
-その後，既存のDeep Knowledge Tracingの手法の拡張として，
-深層学習の最適化の過程で知識分類を自動抽出するためのモデル設計について述べ，
-最後に，モデルから抽出された知識構造から，知識分類を作成し，既存の知識分類と比較する手法について述べる．
-% モデル内で離散化を行う場合？？
+まず，分析手法全体の流れを概説し，手法全体が３つのブロックから構成されることを述べる．
+その後，まず前提として，既存の知識獲得予測の手法において，Deep Knowledge Tracingが最適であることを述べる．
+次に，各ブロックについての説明に移り，
+まず，データセットの要件と作成方法について述べ，
+次に，既存手法の拡張によって，深層学習の最適化の過程で知識分類を自動抽出するためのモデル設計について述べ，
+最後に，モデルから抽出された知識分類を，既存の知識分類と比較検証する手法について述べる．
 
 
 4章では，
 実験で用いるデータセットについて述べる．
 
+３章で述べたデータセットとしての要件を満たす，
+オンライン教育サービスにおける生徒の学習回答ログである，２つのデータセットを紹介し，
+本研究に適用するための事前の処理を説明する．
+
 
 5章では，実験について述べる．
-まず，Deep Knowledge Tracingの拡張法を述べたのち，
+まず，Deep Knowledge Tracingの拡張法について具体的に述べたのち，
 次に，実験設定について述べ，
 最後に実験結果について述べる．
 
 実験結果においては，
 まず，いずれのデータセットにおいても，
-提案手法によって抽出された知識分類を用いた知識獲得の予測精度が，既存の知識分類を用いた場合よりも高いことを示し，
-知識獲得をより的確に説明できる知識分類が，Deep Knoeldge Tracingによって抽出されたことを定量的に示す．
+提案手法によって抽出された知識分類を用いることで，既存の知識分類を用いた場合よりも高い精度で知識獲得を予測できることを示し，
+知識獲得の文脈で最適化された知識分類が，Deep Knoeldge Tracingによって抽出されたことを定量的に示す．
+
 さらに，抽出された知識分類について，
-知識分類が紐づく問題の回答傾向の分析や，既存の知識分類の内容との比較などを行うことで，
+知識分類が紐づく問題の回答傾向の分析や，既存の知識分類との内容や階層構造の比較を行うことで，
 抽出された知識分類の性質を，定量的・定性的に解釈する．
-% 離散化して勝てない場合は文言を変える
-% 提案手法によって，既存の知識分類と同次元に圧縮された知識表現を用いた知識獲得の予測精度が，既存の知識分類を用いた場合よりも高いことを示し，
-% 知識獲得をより的確に説明できる知識表現が，Deep Knoeldge Tracingによって抽出されたことを定量的に示す．
-% さらに，抽出された知識表現を離散化して知識分類として表現し，
-% 知識分類が紐づく問題の回答傾向の分析や，既存の知識分類の内容との比較などを行うことで，
-% 抽出された知識分類を，定量的・定性的に解釈する．
 
 その結果，既存の分類を横断するような，複数の分野の基礎となっている知識分類や，
 これまで一つとされていた分野をより階層的に分解するような，難易度を表す知識分類などが獲得されていることを確認した．
@@ -181,12 +217,15 @@ MOOCsに蓄積された，大規模な学習行動ログから，学習者の知
 
 
 6章では，実験結果を踏まえた考察を述べる．
-検証過程で得られた知見に基づいて，
-本研究で用いた知識構造の分析手法の，他教科や他MOOCsへの適用可能性について議論し，
-教科によらず知識構造を分析できる可能性があること，また，教科によって抽出される知識分類の性質が異なる可能性があることを述べる．
-% また，本研究で抽出された知識表現が連続値表現であり，より発展的な研究として，離散化された知識表現を抽出することの重要性を論じる．
-さらに，本研究で用いた分析手法が，教育学にかぎらず，一般的な大規模な消費ログデータに活用できる可能性を持つことを論じ，
-手法の拡張の可能性を議論する．
+
+まず，本研究で用いた手法や抽出された知識分類について，
+実験結果を踏まえて，その性質を考察する．
+
+また，
+本研究で用いた分析手法の，多様なデータへの適用可能性について議論し，
+教科によらず知識構造を分析できる可能性があること，教科によって抽出される知識分類の性質が異なる可能性があること，
+一方で，複合的な学問や専門性の高い学問については，適用可能性の検証実験が必要であることを述べる．
+さらに，本研究で用いた分析手法が，教育学以外に分野にも応用できる可能性を持つことを論じる．
 
 
 最後に，7章で結論を述べる．
