--- a/chapter03.tex
+++ b/chapter03.tex
@@ -5,7 +5,7 @@
 \lhead{第\ref{chap:method}章　分析手法}
 \cfoot{\thepage}
 本章では，
-事前の知識分類を用いずに生徒の知識獲得を予測し，抽出された知識分類を分析する手法について説明する．
+事前の知識分類を用いずに生徒の知識獲得を予測し，その過程で抽出された知識分類を分析する手法について説明する．
 
 まず，分析手法全体の流れを概説し，手法全体が３つの要素から構成されることを述べる．
 その後，前提として，既存の知識獲得予測の手法において，Deep Knowledge Tracingが最適であることを述べた後，
@@ -19,6 +19,8 @@
 最後に，三つ目の要素として，知識分類の抽出と検証を取り上げ，
 上述の問題と知識分類の関係行列から，知識分類を作成し，既存の知識分類と比較する手法について述べる．
 
+
+% AUCについて何処かに書く
 
 \vvspace
 
@@ -115,7 +117,7 @@
 その抽出した知識分類の妥当性や性質を比較検証するために，既存の知識分類が存在することが必要である．
 
 
-
+% これを最初に持ってくる？
 \section{知識獲得予測に用いる手法の基礎}
 本研究で用いる手法は，数ある知識獲得予測の手法の中でも，Deep Knowledge Tracing（以下，DKT）を元に設計されている．
 DKTを拡張する手法が，本研究の目的を達成する上で最適な手法であることを，以下の二点に基づいて説明する．
