実装修正して方向性修正する前まで

--- a/chapter05.tex
+++ b/chapter05.tex
@@ -189,7 +189,9 @@ marginalは各問題についてそれぞれ正解の周辺確率を予測結果
 \subsection{学習された知識分類の可視化と概観}
 最も良い予測性能を発揮した「深層学習タグ(AutoEncoder)」を可視化し，その概要を明らかにする．
 (ネットワークや対応関係と絡めて執筆予定)
-
+一覧　
+タグ中心のネットワークとスキル中心のネットワーク比較　
+２つをまとめて比較　
 
 \subsection{学習された知識分類の比較分析}
 抽出された知識タグを既存の知識タグと比較することにより，
