--- a/abstract.tex
+++ b/abstract.tex
@@ -1,16 +1,16 @@
 % 導入：学習の個人最適化
-近年，教育とITの融合が進む中で，個人に最適化された教育を自動で提供するという「アダプティブラーニング」が注目されている．
-個人に最適化された学習内容の自動提供を実現するもので，アメリカを中心に注目が集まっており，
+近年，教育とITの融合が進む中で，「アダプティブラーニング」という言葉が注目されている．
+個人に最適化された学習内容の自動提供を実現するもので，その社会的影響の大きさからアメリカを中心として世界的に注目が集まっており，
 関連するスタートアップや大学での研究に，多額の資金が投入されている．
 
-学習内容を個人に最適化するという考え方は，決して新しいものではないが，
+学習内容を個人に最適化するという考え方自体は，決して新しいものではないが，
 一人の教師が複数の生徒に対して同時に教育する形態の現在の学校教育では，
 全ての生徒に対して最適な学習内容を提供するには，障壁があった．
 
 
 % 背景１：オンライン学習サービスを利用した個人最適化，データ蓄積に伴う学習効果分析の進展
-こうした問題を教育の自動化によって解決したいという意識から，アダプティブラーニングが浸透し始めているが，
-その躍進には，オンライン教育サービスの普及が背景にある．
+こうした問題を，ITの活用によって解決しようとする動きの一つとして，アダプティブラーニングが浸透し始めているが，
+その原動力となっているのが，オンライン教育サービスの普及である．
 
 オンライン教育サービスは，
 サービスを利用する生徒の学習行動ログを収集することで，
@@ -24,14 +24,14 @@
 
 従来の機械学習では，人間が問題の特徴を捉えて素性を設計する必要があったが，
 深層学習では，目的に応じた素性を，データから自動で学習することが可能になった．
-既存の機械学習手法を上回る性能を得られることに加え，
+既存の機械学習の手法を上回る性能を得られることに加え，
 人間が認識できないような，データの複雑な特徴を捉えることが可能になったため，
 これまで人間が作り上げてきた概念を，大きく塗り替える可能性を秘めている．
 
 
 % 深層学習＆教育
-こうした深層学習の技術は，オンライン教育サービスのデータを元にした学習効果の分析にも活用が期待されており，
-生徒の知識状態を正しく把握することで，最適な学習コンテンツを特定することを目的とする
+こうした深層学習の技術は，オンライン学習サービスに蓄積された大規模なデータを用いる学習効果の分析にも活用が期待されており，
+生徒の知識状態を正しく把握することで，最適な学習内容を特定することを目的とする
 知識獲得予測の研究に，
 深層学習を適用した例も報告されている．
 
@@ -55,21 +55,21 @@
 実験の結果，
 深層学習が抽出した知識分類を用いることで，
 人間が作成した既存の知識分類を用いる場合よりも，高い精度で知識獲得を予測できることが検証され，
-深層学習によって，知識獲得を予測する上で最適化された知識分類を抽出できることが示された．
+深層学習によって，知識獲得の予測性において最適化された知識分類を抽出できることが示された．
 
 % 考察
 この結果は，
-人間が認識できない，知識獲得過程に潜む複雑な知識構造を，深層学習が獲得したことを示しており，
-抽出された知識分類を活用することで，より最適化された学習内容を生徒に提供できる可能性を示唆している．
+人間が認識しきれない，人間の知識獲得の複雑な過程を説明する表現を，深層学習が獲得したことを示しており，
+抽出された知識分類を活用することで，より最適化された学習内容を生徒に提供し，生徒の学習効率を高めることができる可能性を示唆している．
 
 さらに，
 研究の拡張として，
-本研究で用いた分析手法の教育学での適用可能性や，
-教育学以外の分野への応用可能性を考察した．
+本研究で用いた分析手法の教育医学における適用の可能性や，
+教育学以外の分野への応用の可能性を考察した．
 
 
 % まとめ
 本研究は．
-オンライン教育サービスの普及や，教育分野における大規模分析の活発化，深層学習の躍進など，
+教育とITの融合の進展やオンライン教育サービスの普及，教育分野における大規模分析の活発化や深層学習の躍進など，
 ここ数年の多様な領域の進展によって初めて可能になったものである．
 本研究が，既存の学問体系の再構築，そして人間の学習や知識の解明につながると信じている．
