一旦修正後，大幅修正前まで

--- a/biblio.bib
+++ b/biblio.bib
@@ -686,3 +686,91 @@ and the 7th International Joint Conference on Natural Language Processing},
   year={1995},
   publisher={ACS Publications}
 }
+
+@article{三宅なほみ2002学習環境のデザイン実験,
+  title={学習環境のデザイン実験 学習科学と認知科学},
+  author={三宅なほみ and 三宅芳雄 and 白水始},
+  journal={認知科学},
+  volume={9},
+  number={3},
+  pages={328--337},
+  year={2002},
+  publisher={日本認知科学会}
+}
+
+@article{白水始2014学習科学の新展開,
+  title={学習科学の新展開},
+  author={白水始 and 三宅なほみ and 益川弘如},
+  journal={認知科学},
+  volume={21},
+  number={2},
+  pages={254--267},
+  year={2014},
+  publisher={Japanese Cognitive Science Society}
+}
+
+@article{carr2004learning,
+  title={Learning sciences and instructional systems: Beginning the dialogue [Special issue]},
+  author={Carr-Chellman, AA and Hoadley, C},
+  journal={Educational Technology},
+  volume={44},
+  number={3},
+  year={2004}
+}
+
+@book{sawyer2005cambridge,
+  title={The Cambridge handbook of the learning sciences},
+  author={Sawyer, R Keith},
+  year={2005},
+  publisher={Cambridge University Press}
+}
+
+@article{carbonell1970ai,
+  title={AI in CAI: An artificial-intelligence approach to computer-assisted instruction},
+  author={Carbonell, Jaime R},
+  journal={IEEE transactions on man-machine systems},
+  volume={11},
+  number={4},
+  pages={190--202},
+  year={1970},
+  publisher={IEEE}
+}
+
+@book{sleeman1982intelligent,
+  title={Intelligent tutoring systems},
+  author={Sleeman, D. and Brown, J.S.},
+  isbn={9780126486803},
+  lccn={82185350},
+  series={Computers and people series},
+  url={https://books.google.co.jp/books?id=gfBEAAAAYAAJ},
+  year={1982},
+  publisher={Academic Press}
+}
+
+@book{midgley2014goals,
+  title={Goals, goal structures, and patterns of adaptive learning},
+  author={Midgley, Carol},
+  year={2014},
+  publisher={Routledge}
+}
+
+@article{rumelhart1988learning,
+  title={Learning representations by back-propagating errors},
+  author={Rumelhart, David E and Hinton, Geoffrey E and Williams, Ronald J},
+  journal={Cognitive modeling},
+  volume={5},
+  number={3},
+  pages={1},
+  year={1988}
+}
+
+@article{rosenblatt1958perceptron,
+  title={The perceptron: a probabilistic model for information storage and organization in the brain.},
+  author={Rosenblatt, Frank},
+  journal={Psychological review},
+  volume={65},
+  number={6},
+  pages={386},
+  year={1958},
+  publisher={American Psychological Association}
+}
