第三稿基本構造

--- a/chapter07.tex
+++ b/chapter07.tex
@@ -12,11 +12,12 @@
 深層学習を適用することによって，
 知識獲得の予測において最適化された知識分類を抽出できることを検証した
 
-また，抽出された知識分類を定性的に分析することにより，xxxという知見を得た．
+また，抽出された知識分類を定性的に分析することにより，
+分野の内容的な関係性と，分類ごとの情報量を最適に分配することが，知識獲得の予測性の向上に寄与することがわかった．
 \vvspace
 
 本研究の成果を実際の教育現場で活用する例の一つとして，
-教材支援システムへの適用を論じた．
+教材推薦システムへの適用を論じた．
 
 また，本研究の分析手法の他の科目やオンライン教育サービスへの適用可能性について議論し，
 科目や既存の知識分類の有無によらずに最適な知識分類を学習して知識獲得を予測できる可能性があること，
@@ -27,14 +28,14 @@
 
 
 さらに，本研究の拡張として，
-適用対象の拡張という点で
-対象データの多様化，対象期間の長期化，複数科目の統合，の3つの拡張を述べ，
-また，より一般性を高めることで，
+より良質な知識分類を学習するために活用できる最新の深層学習技術や，
+適用対象データの拡張について述べ，
+また，より一般性を高めた議論として，
 教育学以外の領域においても本手法が適用できる可能性に触れ，
-人間行動に関するの多様な知見を発見できる可能性を論じた．
+人間行動に関する多様な知見を発見できる可能性を論じた．
 \vvspace
 
 本研究は．
-オンライン教育サービスの普及や，教育分野における大規模分析の活発化，深層学習の躍進など，
+教育と情報技術の融合の進展やオンライン教育サービスの普及，教育分野における大規模分析の活発化や深層学習の躍進など，
 ここ数年の多様な領域の進展によって初めて可能になったものである．
 本研究が，既存の学問体系の再構築，そして人間の学習や知識の解明につながると信じている．
