図一通り完成まで

--- a/biblio.bib
+++ b/biblio.bib
@@ -774,3 +774,17 @@ and the 7th International Joint Conference on Natural Language Processing},
   year={1958},
   publisher={American Psychological Association}
 }
+
+@article{maddison2016concrete,
+  title={The Concrete Distribution: A Continuous Relaxation of Discrete Random Variables},
+  author={Maddison, Chris J and Mnih, Andriy and Teh, Yee Whye},
+  journal={arXiv preprint arXiv:1611.00712},
+  year={2016}
+}
+
+@article{jang2016categorical,
+  title={Categorical Reparameterization with Gumbel-Softmax},
+  author={Jang, Eric and Gu, Shixiang and Poole, Ben},
+  journal={arXiv preprint arXiv:1611.01144},
+  year={2016}
+}
