--- a/chapter01_3.tex
+++ b/chapter01_3.tex
@@ -135,36 +135,11 @@ Piechらが発表した，Knowledge Tracingに深層学習を活用するDeep Kn
 生徒の学習効率を最適化するという最終的な目標を真に達成するには，
 知識分類自体も深層学習によって最適化される必要があるといえる．
 
-%知識分類を最適化する要素としては，二つの軸が考えられる．
-%
-%一つ目は知識分類が離散量によって表現されるか，連続量によって表現されるか，という「表現形式」の軸である．
-%まず前提として，人間によって作成された既存の知識分類は，離散表現である．
-%すなわち，各問題は，各知識タグに紐づくか否かという，１か０の2値によって定義されている．
-%これは，各問題を分野ごとに整理しやすく，人間が解釈できることが重要な従来の教育現場においてカリキュラムを設計する上では都合がよいが，
-%実際の，人間の複雑な知識獲得の過程を表現する上で適切な表現だとは言い切れない．
-%例えば，ある問題A，Bが同様に「微分」という知識タグが紐付けられていたとしても，生徒が各問題に正答する確率は同じではない．
-%問題Aは問題Bより複雑な計算を要するかもしれないし，
-%問題Bは「二次関数」や「指数」など細々した周辺知識も必要な，分野横断的な問題かもしれない．
-%このように複合的な性質を持ちうる問題を，どれも均等に１つや２つ程度のタグだけで説明しようとする離散表現は，適切でない可能性が高い．
-%むしろ，問題Aは「微分」の性質を80％，「複雑な分数計算」の性質を20％の割合で含む問題で，
-%問題Bは「微分」の性質を60％，「二次関数」と「指数」の性質を20％ずつ含む，というような
-%連続量を用いた分散表現のほうが，現実に即していると言える．
-%以上より，知識分類は，離散表現と連続表現という「表現形式」に関して最適化が行える可能性が高い．
-%
-%二つ目は，知識分類がどの程度細分化されているか，という「粒度」の軸である．
-%既存の知識分類は，人間の手によって，学習や指導に使いやすいような粒度に設計されている．
-%しかし，その粒度が実際の知識獲得の過程を最適に表現し，予測に適したものであるという根拠はない．
-%例えば，全ての問題が100個の知識タグに分類されているとしても，
-%50程度の粒度で十分かもしれないし，200程度に細分化したほうが予測の精度は高くなるかもしれない．
-%また，適切な粒度はサービスごとの特殊な環境によって左右される可能性もある．
-%以上より，知識分類は，分類をどの程度細分化して定めるかという「粒度」に関する最適化が行える可能性が高い．
-
-
 
 以上の問題意識に基づいた，既存研究との本研究の差分のイメージを図\ref{fig:problem}に示す．
 \begin{figure}[htb]
 \begin{center}
-\includegraphics[width=350pt]{./img/problem_2.png}
+\includegraphics[width=350pt]{./img/problem2.png}
 \end{center}
 \caption{既存研究と本研究の差分のイメージ}
 \label{fig:problem}
@@ -210,11 +185,6 @@ Piechらが発表した，Knowledge Tracingに深層学習を活用するDeep Kn
 
 
 3章では，分析手法について述べる．
-%まず，知識分類を最適化する要素として，分類の「粒度」と「表現形式」という二つの軸が存在することを述べ，
-%本研究が，それぞれの軸について最適な知識分類を抽出し，既存の知識分類と比較する形態を取ることを述べる．
-%その上で，
-%それぞれの軸について最適な知識分類を抽出する上で用いる，共通のモデル構造について述べた後，
-%それぞれの軸について最適化し，検証を行う方法を述べる．
 まず，生徒の回答正誤を予測する過程で最適な知識分類を学習する手法について説明し，
 また，その結果から抽出された知識分類を分析する手法について説明する．
 
