--- a/grad_thesis.tex
+++ b/grad_thesis.tex
@@ -27,6 +27,9 @@
 \usepackage{hypcap}
 \usepackage{cite}
 \usepackage{cleveref}
+
+\usepackage[subrefformat=parens]{subcaption}
+
 \begin{document}
 
 
@@ -68,7 +71,7 @@
 \renewcommand{\baselinestretch}{1.3} 
 \setstretch{1.3}
 
-\input{abstract}
+\input{abstract_2}
 
 
 \newpage
@@ -85,12 +88,12 @@
 \pagenumbering{arabic}
 \pagestyle{fancy}
 
-\input{chapter01}
-\input{chapter02}
-\input{chapter03}
-\input{chapter04}
-\input{chapter05}
-\input{chapter06}
+\input{chapter01_3}
+\input{chapter02_2}
+\input{chapter03_4}
+\input{chapter04_2}
+\input{chapter05_2}
+\input{chapter06_2}
 \input{chapter07}
 
 
