--- a/acknowledgement.tex
+++ b/acknowledgement.tex
@@ -8,38 +8,34 @@
 心より御礼申し上げます．
 \vvspace
 
-指導教官である 松尾豊特任准教授 には，
+指導教官である松尾豊特任准教授には，
 研究構想の相談や論文の書き方，本論文の論理構成について，貴重なご指導をいただきました．
 ここに，深く謝意を表します．
 \vvspace
 
 分析サーバやGPU解析環境の用意等，物理的な研究環境の構築に多大なご協力を下さった
-研究室の教官である 中山浩太郎先生 に，
+研究室の教官である中山浩太郎先生に，
 深く感謝致します．
 \vvspace
 
 上野山克也助教授には，
 研究の方向性や論文の構成について，
-多大なご協力をいただきました．
+多大なご指導をいただきました．
 深く感謝致します．
 \vvspace
 
 松尾研究室やGCIの皆様には，多大なご協力，ご支援いただきました．
-秘書の 中野佐恵子さん，永本登代子さん，浪岡亮子さん，木全やえさんは，日頃から研究室の環境を整えて下さり，研究生活を支えてくださいました．
-松尾研究室の博士・修士課程の先輩である 岩澤有祐さん，飯塚修平さん，野中尚輝さん，鈴木雅大さん，金子貴輝さん，那須野薫さん，黒滝さん，保住さん，冨山翔司さんには，
-未熟な自分の研究の相談に幾度も乗っていただき，多大なご助力をいただきました．
+秘書の 中野佐恵子さん，永本登代子さん，浪岡亮子さん，木全弥栄さんは，日頃から研究室の環境を整えて下さり，研究生活を支えてくださいました．
+松尾研究室の博士・修士課程の先輩である 岩澤有祐さん，飯塚修平さん，野中尚輝さん，鈴木雅大さん，金子貴輝さん，那須野薫さん，黒滝紘生さん，保住純さん，冨山翔司さんには，
+研究の相談に幾度も乗っていただき，多大なご助力をいただきました．
 特に，研究テーマや，研究全体の設計について何度も相談に応じていただいたことに加え，
-深層学習の技術的な問題に関する相談にも幾度となく乗っていただき，多大なご助力を頂いた那須野薫さんには，深く感謝致します．
-研究室同期である大野氏，田村浩一郎氏は，卒業論文の構想や執筆に関して率直に意見を交わし，互いに切磋琢磨し合いながら研究を進めさせていただきました．
+日常の議論を通じて多くの知識や示唆をいただいた那須野薫さんには，多大なるご助力に深く感謝致します．
+研究室の同期である大野峻典氏，田村浩一郎氏は，卒業論文の構想や執筆に関して率直に意見を交わし，互いに切磋琢磨し合いながら研究を進めさせていただきました．
 
 ここに，松尾研究室の皆様へ謝意を表します．
 \vvspace
 
 
-
-
-
-\vvspace
 \vvspace
 \begin{flushright}
 東京大学工学部\\
