--- a/grad_thesis.tex
+++ b/grad_thesis.tex
@@ -11,6 +11,7 @@
 \usepackage{theorem} 
 \usepackage{fancyhdr}
 \usepackage{multirow}
+\usepackage{longtable}
 \usepackage{arydshln}
 \usepackage{algorithm}
 \usepackage{algorithmic}
@@ -111,7 +112,8 @@
 
 
 
-%\appendix
+\appendix
+\input{appendix}
 \addcontentsline{toc}{chapter}{謝辞}
 \input{acknowledgement}
 
